# generic-ai-misp-module

./: .env  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  README.md  USE-CASES.md  pyproject.toml
expansion/: generic_ai.py
tests/: test_generic_ai_e2e.py  test_generic_ai_unit.py
tests/fixtures/: orkl-sample.txt  sample_cti_report.md  sample_query.json
